fixes in k8s file

--- a/K8S/platform-depl.yaml
+++ b/K8S/platform-depl.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: platform-depl
+  name: platform-service-deploy
 spec:
   replicas: 1
   selector:
@@ -12,6 +12,6 @@ spec:
       labels:
         app: platformservice
     spec:
-      containser:
+      containers:
         - name: platformservice
           image: programistadoswiadczony/platform-service:latest
